# serverless-pipeline

./: .gitignore  Cargo.toml
src/: lib.rs  main.rs  queries.rs
