[package]
name = "serverless-pipeline"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
datafusion = "39.0.0"
deltalake = { version = "0.18.0", features = ["datafusion", "s3", "glue"] }
serde_json = "1.0.117"
tokio = "1.38.0"
